<resources>
    <string name="app_name">LED</string>
    <string name="pic_plus">x</string>
    <string name="screen_scan_symbol"> S</string>
    <string name="shareNames">share_startActivity</string>
    <string name="completing">Completing</string>
    <string name="initialize">Initializing</string>
    <string name="next">next</string>
    <string name="program">Program</string>
    <string name="connect">Connection</string>
    <string name="setting">Setting</string>
    <string name="more">More</string>
    <string name="text_program">Text program</string>
    <string name="pic_program">Picture program</string>
    <string name="new_text_program">New text</string>
    <string name="new_pic_program">New Picture</string>
    <string name="empty_text">Empty text</string>
    <string name="program_manage">Program management</string>
    <string name="file_size">FileSize:</string>
    <string name="program_manage_tip">Hold the icon to drag and sort</string>
    <string name="click_check">Search</string>
    <string name="check_result">detected</string>
    <string name="searching">searching</string>
    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnect">Disconnected</string>
    <string name="search_result">detected screen: </string>
    <string name="set_guide">Set Guidance</string>
    <string name="setGuide_part1">Your control card has not set parameters yet</string>
    <string name="setGuide_part2">If your control card is already in use, press "readback parameter"</string>
    <string name="setGuide_part3">If your control card is used for the first time, please enter the "Screen settings", and then send parameters to the control card</string>
    <string name="screenSet_title">Screen parameters settings</string>
    <string name="connect_screen">Connection</string>
    <string name="test_connet">Test connection</string>
    <string name="screen_setting">Screen settings</string>
    <string name="remote_switch">Remote switch</string>
    <string name="language_setting">language settings</string>
    <string name="test">Test</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="testSuccess">Communication success</string>
    <string name="pauseSuccess">Pause success</string>
    <string name="resumeSuccess">Resume success</string>
    <string name="resetSuccess">Reset success</string>
    <string name="save">save</string>
    <string name="auto">Auto</string>
    <string name="password_title">Please enter password </string>
    <string name="password_hint">password</string>
    <string name="password_erro">Password is wrong, please try again</string>
    <string name="card_series">Control card model</string>
    <string name="default_card">HC-1</string>
    <string name="screen_width">Screen width</string>
    <string name="screen_height">Screen height</string>
    <string name="trace_setting">Unit board</string>
    <string name="advance_setting">Advanced settings</string>
    <string name="brightness">Brightness</string>
    <string name="rgb_order">RGB order</string>
    <string name="data">DATA</string>
    <string name="oe">OE</string>
    <string name="OTEcode">138 lines decode</string>
    <string name="dataOrientation">Data direction</string>
    <string name="special">Increased lengthened</string>
    <string name="send_config">Send parameters</string>
    <string name="read_config">Readback parameters</string>
    <string name="pixels">Dot pitch</string>
    <string name="scans">Scan</string>
    <string name="size">Size</string>
    <string name="hub">Hub</string>
    <string name="showAll">All</string>
    <string name="screen_width_set">Screen width setting</string>
    <string name="screen_width_setHint">Please enter the screen width</string>
    <string name="screen_height_set">Screen height setting</string>
    <string name="screen_height_setHint">Please enter the screen height</string>
    <string name="check_screen">Search screen</string>
    <string name="connected_display">Connected Display</string>
    <string name="autoDisplay_state">Connect to the screen to automatically send a message, the screen receives the message and displays the Wi-Fi name</string>
    <string name="autoSend">Automatically send</string>
    <string name="autoNotSend">Do not send</string>
    <string name="forward_framPC">Forward data from PC</string>
    <string name="about">About</string>
    <string name="check_update">Check for updates</string>
    <string name="use_help">Use guidance</string>
    <string name="edit_fontAndSize">Font size</string>
    <string name="edit_size">Size</string>
    <string name="edit_font">Typeface</string>
    <string name="edit_font_color">Font color</string>
    <string name="edit_font_effect">Font effect</string>
    <string name="edit_backgroud_color">Background color</string>
    <string name="edit_translate">Offset</string>
    <string name="edit_font_style">Text Style</string>
    <string name="edit_text_reverse">Reverse Text</string>
    <string name="edit_bound">Border</string>
    <string name="edit_speed">Moving speed</string>
    <string name="edit_stay">Stay time</string>
    <string name="choose_bound">Select the border</string>
    <string name="choose_font">Select the font</string>
    <string name="sending_data">Data is being transmitted </string>
    <string name="connectHelp">Connection instructions</string>
    <string name="connectHelp_first">1.System is 6.0 or above, please click on the Wi-Fi connection for the first connection</string>
    <string name="connectHelp_second">2.If the connection is unsuccessful, click on the Wi-Fi connection</string>
    <string name="connectHelp_password">3.Wi-Fi password:12345678</string>
    <string name="WiFi_connect">Wi-Fi</string>
    <string name="got_it">I know</string>
    <string name="msg_confirm">Ok</string>
    <string name="msg_cancle">Cancel</string>
    <string name="msg_send">Send</string>
    <string name="msg_none">Empty</string>
    <string name="msg_delete_program">Delete the program</string>
    <string name="msg_confirm_delete">Are you sure to delete </string>
    <string name="msg_deleted">deleted</string>
    <string name="msg_hint_input">Please input text</string>
    <string name="msg_set_vertical">Set the vertical offset</string>
    <string name="msg_set_horizon">Set the horizontal offset</string>
    <string name="msg_set_backgroud">Select the background color</string>
    <string name="msg_set_fontColor">Select the font color</string>
    <string name="msg_set_text_size">Set the text size</string>
    <string name="msg_edit_programName">Modify the program name</string>
    <string name="msg_hint_programName">Please enter the program name</string>
    <string name="msg_wifi_disable">Wi-Fi is disable</string>
    <string name="msg_choose_pic">Select Image</string>
    <string name="title_select_card">Please select the control card</string>
    <string name="msg_sendingAndAsk">Is sending data,Quit?</string>
    <string name="msg_quit">Quit</string>
    <string name="msg_convertingAndAsk">Converting data，Quit?</string>
    <string name="send_data">Send data</string>
    <string name="refuse_connect">Denial of service</string>
    <string name="ready">Ready</string>
    <string name="from_phone">From me</string>
    <string name="from_card">From Screen</string>
    <string name="file_illegal">The selected file is incorrect</string>
    <string name="title_activity_use_guide">How to use</string>
    <string name="fromQQ">from QQ file</string>
    <string name="fromWechat">from wechat file</string>
    <string name="fromOther">from other</string>
    <string name="tos_genAndSend">The file has been generated and started sendding</string>
    <string name="tos_wait">Please be patient while converting data</string>
    <string name="tos_press_send">If the transmission does not start after the conversion is complete, press the Send key</string>
    <string name="tos_sendProgram_done">The program was sent successfully</string>
    <string name="tos_start_send">Sending</string>
    <string name="tos_isSending">Already in transmission</string>
    <string name="tos_warn_long">The text is too long and the preview is partially omitted, but does not affect the actual display of the screen</string>
    <string name="tos_disConnect_screen">Not connected screen, please connect the screen</string>
    <string name="tos_reading">reading,please wait</string>
    <string name="tos_refresh_success">Successfully refreshes screen parameters!</string>
    <string name="tos_screen_noresponse">The screen is not responding. Please try again</string>
    <string name="tos_set_wifi_enable">Please enable Wi-Fi</string>
    <string name="tos_request_permission">Need permission to open WIFI</string>
    <string name="tos_select_trace">Please select the Unit board</string>
    <string name="tos_wrong_width">Size is too large, please re-set</string>
    <string name="tos_wrong_resolution">Control card does not support this screen resolution, please re-fill</string>
    <string name="tos_wifi_switch">Please switch WiFi to connect control card</string>
    <string name="tos_wifi_timeout">The connection timed out. Please try again</string>
    <string name="tos_send_config_success">Send parameters successfully</string>
    <string name="tos_switch_sucess">Switch the program successfully</string>
    <string name="tos_read_config_success">Readback parameters are completed</string>
    <string name="tos_read_fail">The readback parameter failed. Please try again later</string>
    <string name="tos_press_again">Press again to exit the program</string>
    <string name="tos_check_success">check completed</string>
    <string name="help_part0">The Wi-Fi password:12345678</string>
    <string name="help_part1">1.Read the parameters. For the first time, if your screen can be used normally, please connect the control card, and then read back the screen parameters</string>
    <string name="help_part1.1">You can in the main interface of the program bar click on this button, read back the screen parameters</string>
    <string name="help_part1.2">You can also set the parameters manually, enter the screen settings, set the screen width, the screen height and set other options, send the parameters set to the control card</string>
    <string name="help_part2">2.Add the program. After the parameter is set, in the main interface of the program bar, click the lower right corner of the button to choose to add the program content</string>
    <string name="help_part3">3.Add font. If you want to add a font, you can copy the font file to your phone storage directory, the file location is:ExternalStorageDirectory/fonts/LedFonts/</string>
    <string name="help_part3.1">Font file. Click here to open the font file directory</string>
    <string name="help_part4">4.Preview the program. In the program editing interface, click on the picture can be full screen preview</string>
    <string name="help_part5">5.Program sort.Enter the program management, long press the icon can be drag and sort</string>
    <string name="help_part5.1">5.1Delete the program. In the main interface of the program section, long press the program can delete the program</string>
    <string name="help_part6">6.Connection.In the connection page, if multiple screens are detected, click the screen you want to connect to connect, if the connection is not successful, please open the WiFi settings interface to connect</string>
    <string name="help_part7">7.Program switching.Enter the settings section of the remote switch, you can switch programs, if the recording multiple sets of programs, please use the PC version of the software to record</string>
    <string name="version">version</string>
</resources>