<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect_help_diag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="cn.com.hotled.xyled.activity.ConnectHelpDiagActivity">
    <ImageView
        android:src="@drawable/ic_help_amber_a400_36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:layout_margin="3dp"
        android:text="@string/set_guide"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/help_part0"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/setGuide_part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/setGuide_part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/setGuide_part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bt_setParam_enterSet"
        android:layout_margin="5dp"
        android:background="@drawable/button_bg"
        android:text="@string/screen_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bt_setParam_readback"
        android:layout_margin="5dp"
        android:background="@drawable/button_bg"
        android:text="@string/read_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
