<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_setfrgm_enterWifi"
        android:drawableLeft="@drawable/ic_wifi_green_a700_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/connect_screen"/>

    <TextView
        android:id="@+id/tv_setfrgm_testConnnet"
        android:drawableLeft="@drawable/ic_developer_board_primary_dark_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/test_connet"/>

    <TextView
        android:id="@+id/tv_setfrgm_screenSet"
        android:drawableLeft="@drawable/ic_phonelink_setup_primary_dark_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/screen_setting"/>

    <TextView
        android:id="@+id/tv_setfrgm_remote"
        android:drawableLeft="@drawable/ic_settings_remote_green_a700_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/remote_switch"/>

    <TextView
        android:id="@+id/tv_setfrgm_language"
        android:drawableLeft="@drawable/ic_language_primary_dark_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/language_setting"/>

</LinearLayout>