<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_more_search"
        android:drawableLeft="@drawable/ic_search_green_a700_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/check_screen"/>
    <TextView
        android:id="@+id/tv_more_autoSend"
        android:drawableLeft="@drawable/ic_sync_amber_700_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/connected_display"/>

    <TextView
        android:id="@+id/tv_more_sendFromComputer"
        android:drawableLeft="@drawable/ic_screen_share_green_a700_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/forward_framPC"/>

    <TextView
        android:id="@+id/tv_more_help"
        android:drawableLeft="@drawable/ic_help_black_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/use_help"/>

    <TextView
        android:id="@+id/tv_more_about"
        android:drawableLeft="@drawable/ic_copyright_primary_dark_36dp"
        style="@style/MainFragGuideText"
        android:text="@string/about"/>


</LinearLayout>