<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect_help_diag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="cn.com.hotled.xyled.activity.ConnectHelpDiagActivity">
    <ImageView
        android:src="@drawable/ic_help_amber_a400_36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:text="@string/connectHelp"
        android:textSize="22sp"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/connectHelp_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/connectHelp_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_margin="3dp"
        android:text="@string/connectHelp_password"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_help_enterwifi"
            android:layout_margin="2dp"
            android:background="@drawable/sendbutton_bg"
            android:text="@string/WiFi_connect"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bt_help_done"
            android:layout_margin="2dp"
            android:background="@drawable/sendbutton_bg"
            android:text="@string/got_it"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
