<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.com.hotled.xyled.activity.UseGuideActivity"
    tools:showIn="@layout/activity_use_guide">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            android:drawableRight="@drawable/ic_refresh_primary_dark_36dp"
            android:text="@string/help_part1.1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part1.2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part3"/>
        <TextView
            android:id="@+id/tv_open_fontfolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_insert_drive_file_primary_dark_36dp"
            android:text="@string/help_part3.1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            android:drawableRight="@drawable/ic_list_primary_dark_48dp"
            android:text="@string/help_part5"
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            android:text="@string/help_part5.1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/help_part7"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
