<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/activity_socket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="cn.com.hotled.xyled.activity.SocketActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    </android.support.v7.widget.RecyclerView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:layout_margin="2dp"
                    android:background="@drawable/sendbutton_bg"
                    android:id="@+id/socket_test"
                    android:layout_weight="1"
                    android:text="@string/test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_margin="2dp"
                    android:background="@drawable/sendbutton_bg"
                    android:id="@+id/socket_rest"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_margin="2dp"
                    android:background="@drawable/sendbutton_bg"
                    android:id="@+id/socket_pause"
                    android:layout_weight="1"
                    android:text="@string/pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_margin="2dp"
                    android:background="@drawable/sendbutton_bg"
                    android:id="@+id/socket_resume"
                    android:layout_weight="1"
                    android:text="@string/resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
