<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advance_set"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.hotled.xyled.activity.AdvanceSetActivity">
    <LinearLayout
        android:background="@drawable/recycler_bg"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dataOrientation"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spn_set_dataOrientation"
            android:entries="@array/dataOrientation"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/recycler_bg"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/special"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spn_set_special"
            android:entries="@array/pref_special"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:padding="5dp"
        android:text="@string/brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:padding="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_set_brightness"
            android:src="@drawable/ic_brightness_low_red_700_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:layout_gravity="center"
            android:id="@+id/sb_set_brightness"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
